lab1/parser.output
Grammar

    0 $accept: root "end of file"

    1 root: goal

    2 goal: mainclass classdeclarations "end of file"
    3     | mainclass "end of file"

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    5 classdeclaration: CLASS identifier LCB vardeclarations methoddeclarations RCB
    6                 | CLASS identifier LCB methoddeclarations RCB
    7                 | CLASS identifier LCB vardeclarations RCB
    8                 | CLASS identifier LCB RCB

    9 classdeclarations: classdeclaration
   10                  | classdeclarations classdeclaration

   11 methoddeclaration: PUBLIC type identifier LP parameters RP LCB methodbody RETURN expression SEMICOLON RCB
   12                  | PUBLIC type identifier LP RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier LP parameters RP LCB RETURN expression SEMICOLON RCB
   14                  | PUBLIC type identifier LP RP LCB RETURN expression SEMICOLON RCB

   15 methoddeclarations: methoddeclaration
   16                   | methoddeclarations methoddeclaration

   17 methodbody: vardeclaration
   18           | statement
   19           | methodbody vardeclaration
   20           | methodbody statement

   21 vardeclaration: type identifier SEMICOLON

   22 vardeclarations: vardeclaration
   23                | vardeclarations vardeclaration

   24 parameters: type identifier
   25           | type identifier COMMA parameters

   26 type: INTTYPE LHB RHB
   27     | BOOLTYPE
   28     | INTTYPE
   29     | identifier

   30 statement: LCB RCB
   31          | LCB statements RCB
   32          | stmt_if
   33          | WHILE LP expression RP statement
   34          | PRINT LP expression RP SEMICOLON
   35          | identifier ASSIGN expression SEMICOLON
   36          | identifier LHB expression RHB ASSIGN expression SEMICOLON

   37 statements: statement
   38           | statements statement

   39 stmt_if: IF LP expression RP statement
   40        | IF LP expression RP statement ELSE statement

   41 expression: expression PLUSOP expression
   42           | expression MINUSOP expression
   43           | expression MULTOP expression
   44           | expression DIVOP expression
   45           | expression ASSIGN expression
   46           | expression GT expression
   47           | expression LT expression
   48           | expression EQ expression
   49           | expression OR expression
   50           | expression AND expression
   51           | experiment
   52           | expression PERIOD LENGTH
   53           | expression PERIOD identifier LP exprlist RP
   54           | expression PERIOD identifier LP RP
   55           | TRUE
   56           | FALSE
   57           | identifier
   58           | THIS
   59           | NEW INTTYPE LHB expression RHB
   60           | NEW identifier LP RP
   61           | EXCLAMATION expression
   62           | factor

   63 experiment: expression LHB expression RHB

   64 exprlist: expression
   65         | exprlist COMMA expression

   66 factor: INT
   67       | LP expression RP

   68 identifier: IDENTIFIER


Terminals, with rules where they appear

    "end of file" (0) 0 2 3
    error (256)
    PLUSOP <std::string> (258) 41
    MINUSOP <std::string> (259) 42
    MULTOP <std::string> (260) 43
    DIVOP <std::string> (261) 44
    INT <std::string> (262) 66
    LP <std::string> (263) 4 11 12 13 14 33 34 39 40 53 54 60 67
    RP <std::string> (264) 4 11 12 13 14 33 34 39 40 53 54 60 67
    LHB <std::string> (265) 4 26 36 59 63
    RHB <std::string> (266) 4 26 36 59 63
    LCB <std::string> (267) 4 5 6 7 8 11 12 13 14 30 31
    RCB <std::string> (268) 4 5 6 7 8 11 12 13 14 30 31
    ASSIGN <std::string> (269) 35 36 45
    EQ <std::string> (270) 48
    AND <std::string> (271) 50
    OR <std::string> (272) 49
    GT <std::string> (273) 46
    LT <std::string> (274) 47
    CLASS <std::string> (275) 4 5 6 7 8
    STATIC <std::string> (276) 4
    VOID <std::string> (277) 4
    MAIN <std::string> (278) 4
    PUBLIC <std::string> (279) 4 11 12 13 14
    RETURN <std::string> (280) 11 12 13 14
    PERIOD <std::string> (281) 52 53 54
    COMMA <std::string> (282) 25 65
    EXCLAMATION <std::string> (283) 61
    SEMICOLON <std::string> (284) 11 12 13 14 21 34 35 36
    INTTYPE <std::string> (285) 26 28 59
    BOOLTYPE <std::string> (286) 27
    STRING <std::string> (287) 4
    IF <std::string> (288) 39 40
    ELSE <std::string> (289) 40
    WHILE <std::string> (290) 33
    NEW <std::string> (291) 59 60
    LENGTH <std::string> (292) 52
    PRINT <std::string> (293) 34
    IDENTIFIER <std::string> (294) 68
    TRUE <std::string> (295) 55
    FALSE <std::string> (296) 56
    THIS <std::string> (297) 58
    NO_ELSE (298)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    root <Node *> (45)
        on left: 1
        on right: 0
    goal <Node *> (46)
        on left: 2 3
        on right: 1
    mainclass <Node *> (47)
        on left: 4
        on right: 2 3
    classdeclaration <Node *> (48)
        on left: 5 6 7 8
        on right: 9 10
    classdeclarations <Node *> (49)
        on left: 9 10
        on right: 2 10
    methoddeclaration <Node *> (50)
        on left: 11 12 13 14
        on right: 15 16
    methoddeclarations <Node *> (51)
        on left: 15 16
        on right: 5 6 16
    methodbody <Node *> (52)
        on left: 17 18 19 20
        on right: 11 12 19 20
    vardeclaration <Node *> (53)
        on left: 21
        on right: 17 19 22 23
    vardeclarations <Node *> (54)
        on left: 22 23
        on right: 5 7 23
    parameters <Node *> (55)
        on left: 24 25
        on right: 11 13 25
    type <Node *> (56)
        on left: 26 27 28 29
        on right: 11 12 13 14 21 24 25
    statement <Node *> (57)
        on left: 30 31 32 33 34 35 36
        on right: 4 18 20 33 37 38 39 40
    statements <Node *> (58)
        on left: 37 38
        on right: 31 38
    stmt_if <Node *> (59)
        on left: 39 40
        on right: 32
    expression <Node *> (60)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 11 12 13 14 33 34 35 36 39 40 41 42 43 44 45 46 47 48 49 50 52 53 54 59 61 63 64 65 67
    experiment <Node *> (61)
        on left: 63
        on right: 51
    exprlist <Node *> (62)
        on left: 64 65
        on right: 53 65
    factor <Node *> (63)
        on left: 66 67
        on right: 62
    identifier <Node *> (64)
        on left: 68
        on right: 4 5 6 7 8 11 12 13 14 21 24 25 29 35 36 53 54 57 60


State 0

    0 $accept: . root "end of file"

    PUBLIC  shift, and go to state 1

    root       go to state 2
    goal       go to state 3
    mainclass  go to state 4


State 1

    4 mainclass: PUBLIC . CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    CLASS  shift, and go to state 5


State 2

    0 $accept: root . "end of file"

    "end of file"  shift, and go to state 6


State 3

    1 root: goal .

    $default  reduce using rule 1 (root)


State 4

    2 goal: mainclass . classdeclarations "end of file"
    3     | mainclass . "end of file"

    "end of file"  shift, and go to state 7
    CLASS          shift, and go to state 8

    classdeclaration   go to state 9
    classdeclarations  go to state 10


State 5

    4 mainclass: PUBLIC CLASS . identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 12


State 6

    0 $accept: root "end of file" .

    $default  accept


State 7

    3 goal: mainclass "end of file" .

    $default  reduce using rule 3 (goal)


State 8

    5 classdeclaration: CLASS . identifier LCB vardeclarations methoddeclarations RCB
    6                 | CLASS . identifier LCB methoddeclarations RCB
    7                 | CLASS . identifier LCB vardeclarations RCB
    8                 | CLASS . identifier LCB RCB

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 13


State 9

    9 classdeclarations: classdeclaration .

    $default  reduce using rule 9 (classdeclarations)


State 10

    2 goal: mainclass classdeclarations . "end of file"
   10 classdeclarations: classdeclarations . classdeclaration

    "end of file"  shift, and go to state 14
    CLASS          shift, and go to state 8

    classdeclaration  go to state 15


State 11

   68 identifier: IDENTIFIER .

    $default  reduce using rule 68 (identifier)


State 12

    4 mainclass: PUBLIC CLASS identifier . LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    LCB  shift, and go to state 16


State 13

    5 classdeclaration: CLASS identifier . LCB vardeclarations methoddeclarations RCB
    6                 | CLASS identifier . LCB methoddeclarations RCB
    7                 | CLASS identifier . LCB vardeclarations RCB
    8                 | CLASS identifier . LCB RCB

    LCB  shift, and go to state 17


State 14

    2 goal: mainclass classdeclarations "end of file" .

    $default  reduce using rule 2 (goal)


State 15

   10 classdeclarations: classdeclarations classdeclaration .

    $default  reduce using rule 10 (classdeclarations)


State 16

    4 mainclass: PUBLIC CLASS identifier LCB . PUBLIC STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    PUBLIC  shift, and go to state 18


State 17

    5 classdeclaration: CLASS identifier LCB . vardeclarations methoddeclarations RCB
    6                 | CLASS identifier LCB . methoddeclarations RCB
    7                 | CLASS identifier LCB . vardeclarations RCB
    8                 | CLASS identifier LCB . RCB

    RCB         shift, and go to state 19
    PUBLIC      shift, and go to state 20
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IDENTIFIER  shift, and go to state 11

    methoddeclaration   go to state 23
    methoddeclarations  go to state 24
    vardeclaration      go to state 25
    vardeclarations     go to state 26
    type                go to state 27
    identifier          go to state 28


State 18

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC . STATIC VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    STATIC  shift, and go to state 29


State 19

    8 classdeclaration: CLASS identifier LCB RCB .

    $default  reduce using rule 8 (classdeclaration)


State 20

   11 methoddeclaration: PUBLIC . type identifier LP parameters RP LCB methodbody RETURN expression SEMICOLON RCB
   12                  | PUBLIC . type identifier LP RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC . type identifier LP parameters RP LCB RETURN expression SEMICOLON RCB
   14                  | PUBLIC . type identifier LP RP LCB RETURN expression SEMICOLON RCB

    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IDENTIFIER  shift, and go to state 11

    type        go to state 30
    identifier  go to state 28


State 21

   26 type: INTTYPE . LHB RHB
   28     | INTTYPE .

    LHB  shift, and go to state 31

    $default  reduce using rule 28 (type)


State 22

   27 type: BOOLTYPE .

    $default  reduce using rule 27 (type)


State 23

   15 methoddeclarations: methoddeclaration .

    $default  reduce using rule 15 (methoddeclarations)


State 24

    6 classdeclaration: CLASS identifier LCB methoddeclarations . RCB
   16 methoddeclarations: methoddeclarations . methoddeclaration

    RCB     shift, and go to state 32
    PUBLIC  shift, and go to state 20

    methoddeclaration  go to state 33


State 25

   22 vardeclarations: vardeclaration .

    $default  reduce using rule 22 (vardeclarations)


State 26

    5 classdeclaration: CLASS identifier LCB vardeclarations . methoddeclarations RCB
    7                 | CLASS identifier LCB vardeclarations . RCB
   23 vardeclarations: vardeclarations . vardeclaration

    RCB         shift, and go to state 34
    PUBLIC      shift, and go to state 20
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IDENTIFIER  shift, and go to state 11

    methoddeclaration   go to state 23
    methoddeclarations  go to state 35
    vardeclaration      go to state 36
    type                go to state 27
    identifier          go to state 28


State 27

   21 vardeclaration: type . identifier SEMICOLON

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 37


State 28

   29 type: identifier .

    $default  reduce using rule 29 (type)


State 29

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC . VOID MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    VOID  shift, and go to state 38


State 30

   11 methoddeclaration: PUBLIC type . identifier LP parameters RP LCB methodbody RETURN expression SEMICOLON RCB
   12                  | PUBLIC type . identifier LP RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type . identifier LP parameters RP LCB RETURN expression SEMICOLON RCB
   14                  | PUBLIC type . identifier LP RP LCB RETURN expression SEMICOLON RCB

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 39


State 31

   26 type: INTTYPE LHB . RHB

    RHB  shift, and go to state 40


State 32

    6 classdeclaration: CLASS identifier LCB methoddeclarations RCB .

    $default  reduce using rule 6 (classdeclaration)


State 33

   16 methoddeclarations: methoddeclarations methoddeclaration .

    $default  reduce using rule 16 (methoddeclarations)


State 34

    7 classdeclaration: CLASS identifier LCB vardeclarations RCB .

    $default  reduce using rule 7 (classdeclaration)


State 35

    5 classdeclaration: CLASS identifier LCB vardeclarations methoddeclarations . RCB
   16 methoddeclarations: methoddeclarations . methoddeclaration

    RCB     shift, and go to state 41
    PUBLIC  shift, and go to state 20

    methoddeclaration  go to state 33


State 36

   23 vardeclarations: vardeclarations vardeclaration .

    $default  reduce using rule 23 (vardeclarations)


State 37

   21 vardeclaration: type identifier . SEMICOLON

    SEMICOLON  shift, and go to state 42


State 38

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID . MAIN LP STRING LHB RHB identifier RP LCB statement RCB RCB

    MAIN  shift, and go to state 43


State 39

   11 methoddeclaration: PUBLIC type identifier . LP parameters RP LCB methodbody RETURN expression SEMICOLON RCB
   12                  | PUBLIC type identifier . LP RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier . LP parameters RP LCB RETURN expression SEMICOLON RCB
   14                  | PUBLIC type identifier . LP RP LCB RETURN expression SEMICOLON RCB

    LP  shift, and go to state 44


State 40

   26 type: INTTYPE LHB RHB .

    $default  reduce using rule 26 (type)


State 41

    5 classdeclaration: CLASS identifier LCB vardeclarations methoddeclarations RCB .

    $default  reduce using rule 5 (classdeclaration)


State 42

   21 vardeclaration: type identifier SEMICOLON .

    $default  reduce using rule 21 (vardeclaration)


State 43

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN . LP STRING LHB RHB identifier RP LCB statement RCB RCB

    LP  shift, and go to state 45


State 44

   11 methoddeclaration: PUBLIC type identifier LP . parameters RP LCB methodbody RETURN expression SEMICOLON RCB
   12                  | PUBLIC type identifier LP . RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier LP . parameters RP LCB RETURN expression SEMICOLON RCB
   14                  | PUBLIC type identifier LP . RP LCB RETURN expression SEMICOLON RCB

    RP          shift, and go to state 46
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IDENTIFIER  shift, and go to state 11

    parameters  go to state 47
    type        go to state 48
    identifier  go to state 28


State 45

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP . STRING LHB RHB identifier RP LCB statement RCB RCB

    STRING  shift, and go to state 49


State 46

   12 methoddeclaration: PUBLIC type identifier LP RP . LCB methodbody RETURN expression SEMICOLON RCB
   14                  | PUBLIC type identifier LP RP . LCB RETURN expression SEMICOLON RCB

    LCB  shift, and go to state 50


State 47

   11 methoddeclaration: PUBLIC type identifier LP parameters . RP LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier LP parameters . RP LCB RETURN expression SEMICOLON RCB

    RP  shift, and go to state 51


State 48

   24 parameters: type . identifier
   25           | type . identifier COMMA parameters

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 52


State 49

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING . LHB RHB identifier RP LCB statement RCB RCB

    LHB  shift, and go to state 53


State 50

   12 methoddeclaration: PUBLIC type identifier LP RP LCB . methodbody RETURN expression SEMICOLON RCB
   14                  | PUBLIC type identifier LP RP LCB . RETURN expression SEMICOLON RCB

    LCB         shift, and go to state 54
    RETURN      shift, and go to state 55
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    PRINT       shift, and go to state 58
    IDENTIFIER  shift, and go to state 11

    methodbody      go to state 59
    vardeclaration  go to state 60
    type            go to state 27
    statement       go to state 61
    stmt_if         go to state 62
    identifier      go to state 63


State 51

   11 methoddeclaration: PUBLIC type identifier LP parameters RP . LCB methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier LP parameters RP . LCB RETURN expression SEMICOLON RCB

    LCB  shift, and go to state 64


State 52

   24 parameters: type identifier .
   25           | type identifier . COMMA parameters

    COMMA  shift, and go to state 65

    $default  reduce using rule 24 (parameters)


State 53

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB . RHB identifier RP LCB statement RCB RCB

    RHB  shift, and go to state 66


State 54

   30 statement: LCB . RCB
   31          | LCB . statements RCB

    LCB         shift, and go to state 54
    RCB         shift, and go to state 67
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    PRINT       shift, and go to state 58
    IDENTIFIER  shift, and go to state 11

    statement   go to state 68
    statements  go to state 69
    stmt_if     go to state 62
    identifier  go to state 70


State 55

   14 methoddeclaration: PUBLIC type identifier LP RP LCB RETURN . expression SEMICOLON RCB

    INT          shift, and go to state 71
    LP           shift, and go to state 72
    EXCLAMATION  shift, and go to state 73
    NEW          shift, and go to state 74
    IDENTIFIER   shift, and go to state 11
    TRUE         shift, and go to state 75
    FALSE        shift, and go to state 76
    THIS         shift, and go to state 77

    expression  go to state 78
    experiment  go to state 79
    factor      go to state 80
    identifier  go to state 81


State 56

   39 stmt_if: IF . LP expression RP statement
   40        | IF . LP expression RP statement ELSE statement

    LP  shift, and go to state 82


State 57

   33 statement: WHILE . LP expression RP statement

    LP  shift, and go to state 83


State 58

   34 statement: PRINT . LP expression RP SEMICOLON

    LP  shift, and go to state 84


State 59

   12 methoddeclaration: PUBLIC type identifier LP RP LCB methodbody . RETURN expression SEMICOLON RCB
   19 methodbody: methodbody . vardeclaration
   20           | methodbody . statement

    LCB         shift, and go to state 54
    RETURN      shift, and go to state 85
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    PRINT       shift, and go to state 58
    IDENTIFIER  shift, and go to state 11

    vardeclaration  go to state 86
    type            go to state 27
    statement       go to state 87
    stmt_if         go to state 62
    identifier      go to state 63


State 60

   17 methodbody: vardeclaration .

    $default  reduce using rule 17 (methodbody)


State 61

   18 methodbody: statement .

    $default  reduce using rule 18 (methodbody)


State 62

   32 statement: stmt_if .

    $default  reduce using rule 32 (statement)


State 63

   29 type: identifier .
   35 statement: identifier . ASSIGN expression SEMICOLON
   36          | identifier . LHB expression RHB ASSIGN expression SEMICOLON

    LHB     shift, and go to state 88
    ASSIGN  shift, and go to state 89

    $default  reduce using rule 29 (type)


State 64

   11 methoddeclaration: PUBLIC type identifier LP parameters RP LCB . methodbody RETURN expression SEMICOLON RCB
   13                  | PUBLIC type identifier LP parameters RP LCB . RETURN expression SEMICOLON RCB

    LCB         shift, and go to state 54
    RETURN      shift, and go to state 90
    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IF          shift, and go to state 56
    WHILE       shift, and go to state 57
    PRINT       shift, and go to state 58
    IDENTIFIER  shift, and go to state 11

    methodbody      go to state 91
    vardeclaration  go to state 60
    type            go to state 27
    statement       go to state 61
    stmt_if         go to state 62
    identifier      go to state 63


State 65

   25 parameters: type identifier COMMA . parameters

    INTTYPE     shift, and go to state 21
    BOOLTYPE    shift, and go to state 22
    IDENTIFIER  shift, and go to state 11

    parameters  go to state 92
    type        go to state 48
    identifier  go to state 28


State 66

    4 mainclass: PUBLIC CLASS identifier LCB PUBLIC STATIC VOID MAIN LP STRING LHB RHB . identifier RP LCB statement RCB RCB

    IDENTIFIER  shift, and go to state 11

    identifier  go to state 93


State 67

   30 statement: LCB RCB .

    $default  reduce using rule 30 (statement)


State 68
